# mwFileStatusWebsite

./: .gitignore  CITATION.cff  LICENSE  README.md  consistency.html  index.html  main.py  missing.html  mw_website.sh  parsing_error.html  passing.html  pyproject.toml  requirements.txt  setup.py  test.html  validation.json  validation_error.html  warnings_only.html
docs/: config.json
docs/templates/: analysis_template.html  analysis_template_2.html  badge_template.txt  grid_item_template.txt  header_template.txt  index_template.txt  statistics_template.txt  template.html
mwFileStatusWebsite/: __init__.py  cli.py  compare.py  config.json  constructor.py  generate_html.py  validator.py
mwFileStatusWebsite/templates/: comparison_stats_template.txt  grid_item_template.txt  index_template.txt  statistics_template.txt
src/mwFileStatusWebsite/: __init__.py  _version.py  cli.py  compare.py  constructor.py  validator.py
src/mwFileStatusWebsite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
styles/: styles.css
tests/: test_cli.py  test_compare.py  test_constructor.py  test_validator.py
tests/test/: 1_study_analysis_dict.json  study_analysis_dict.json
tests/test_files/: https%3A%2F%2Fwww_metabolomicsworkbench_org%2Frest%2Fstudy%2Fanalysis_id%2FAN000001%2Fmwtab%2Fjson.json  https%3A%2F%2Fwww_metabolomicsworkbench_org%2Frest%2Fstudy%2Fanalysis_id%2FAN000001%2Fmwtab%2Ftxt.txt  https%3A%2F%2Fwww_metabolomicsworkbench_org%2Frest%2Fstudy%2Fanalysis_id%2FAN000023%2Fmwtab%2Fjson.json  https%3A%2F%2Fwww_metabolomicsworkbench_org%2Frest%2Fstudy%2Fanalysis_id%2FAN000023%2Fmwtab%2Ftxt.txt  https%3A%2F%2Fwww_metabolomicsworkbench_org%2Frest%2Fstudy%2Fanalysis_id%2FAN000024%2Fmwtab%2Fjson.json  study_analysis_dict.json  study_analysis_dict2.json  (+5 more)
validator/: generate_html.py  validator.py
(+8 files in other folders)
